Upgrade to Spring Batch 6 and Spring Integration 7
- Replace Batch XML with Java configuration across all four samples
- Update Spring Batch, Spring Integration, and Jakarta Mail APIs
- Adapt concurrent, async, and remote chunk processing
- Migrate tests to JUnit Jupiter and compare job exit codes
- Update application launchers and directory discovery
- Replace Log4j configuration with Logback
- Refresh build and usage documentation
- Update imports to use `jakarta.mail` instead of `javax.mail`
- Modify logging statements to use parameterized messages
- Update SQL table creation syntax for payments
- Refactor `PaymentWriter` to use `Chunk` for batch processing